--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Belajar Git</h1>
     <p>Ini paragraf</p>
   </body>
 </html>
